Fix: Give the score if index.html has at least 4 p tags inside the body tags

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -71,6 +71,9 @@
 
         <aside>
             <p>This is a placeholder for additional contents.</p>
+            <p>This is a placeholder for additional contents.</p>
+            <p>This is a placeholder for additional contents.</p>
+            <p>This is a placeholder for additional contents.</p>
         </aside>
     </main>
 
