Fix: Footer Text Setup

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -77,9 +77,7 @@
         </aside>
     </main>
 
-    <footer>
-        Made by Alphakeem - <a href="www.alphakeemadroit.com.ng" target="_blank">here</a>
-    </footer>
+    <footer> Made by <a href="www.alphakeemadroit.com.ng" target="_blank">Alphakeem</a></footer>
     
 </body>
 </html>
