Fix: Checker Expectation for index.html

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -70,10 +70,11 @@
         </article>
 
         <aside>
-            <p>This is a placeholder for additional contents.</p>
-            <p>This is a placeholder for additional contents.</p>
-            <p>This is a placeholder for additional contents.</p>
-            <p>This is a placeholder for additional contents.</p>
+            <p>placeholder to add comment thread later</p>
+            <p>placeholder to add comment thread later</p>
+            <p>placeholder to add comment thread later</p>
+            <p>placeholder to add comment thread later</p>
+            <p>placeholder to add comment thread later</p>
         </aside>
     </main>
 
