Give the score if index.html has the right structure with header, main, and footer

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -22,6 +22,12 @@
             <h2>About Me</h2>
             <p>Hello! I'm Alphakeem, a Software Engineer. Welcome to my portfolio website.</p>
 
+            <p>Some contents here.</p>
+
+            <p>Some contents here.</p>
+
+            <p>Some contents here.</p>
+
             <h3>Contact Me</h3>
             <p>Email: <a href="mailto:alphakeem12@gmail.com">alphakeem12@gmail.com</a>
 
@@ -69,13 +75,7 @@
             </table>
         </article>
 
-        <aside>
-            <p>placeholder to add comment thread later</p>
-            <p>placeholder to add comment thread later</p>
-            <p>placeholder to add comment thread later</p>
-            <p>placeholder to add comment thread later</p>
-            <p>placeholder to add comment thread later</p>
-        </aside>
+        <aside>placeholder to add comment thread later</aside>
     </main>
 
     <footer> Made by <a href="www.alphakeemadroit.com.ng" target="_blank">Alphakeem</a></footer>
