Fix: Make a cool website

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="/html_basic/base_index.html">Base HTML</a></li>
-                <li><a href="/html_basic/tweets.html">Tweet</a></li>
-            </ul>
-        </nav>
+        <ul>
+            <li><a href="/html_basic/base_index.html">Base HTML</a></li>
+            <li><a href="/html_basic/tweets.html">Tweet</a></li>
+        </ul>
     </header>
 
     <main>
@@ -78,7 +76,7 @@
         <aside>placeholder to add comment thread later</aside>
     </main>
 
-    <footer> Made by <a href="www.alphakeemadroit.com.ng" target="_blank">Alphakeem</a></footer>
+    <footer> Made by Alphakeem Adroit - <a href="www.alphakeemadroit.com.ng" target="_blank">here</a></footer>
     
 </body>
 </html>
