Fix: tweets.html Footer Content Structure

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -33,9 +33,7 @@
         </button>
     </main>
 
-    <footer>
-        Made by Alphakeem - <a href="www.alphakeemadroit.com.ng" target="_blank">here</a>
-    </footer>    
+    <footer>Made by Alphakeem Adroit - <a href="www.alphakeemadroit.com.ng" target="_blank">here</a></footer>    
     
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
