--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -22,11 +22,7 @@
             </blockquote>
         </article>
 
-        <aside>
-            <blockquote class="twitter-tweet">
-                <p lang="en" dir="ltr">🔥📅 Completed Month 2 of backend development in <a href="https://twitter.com/hashtag/ALX_BE?src=hash&amp;ref_src=twsrc%5Etfw">#ALX_BE</a>! 💪🏽 I’ve dived deep into Python, databases, and Git, mastering the essentials for building powerful applications. 💬👇🏽 <a href="https://twitter.com/hashtag/ALX?src=hash&amp;ref_src=twsrc%5Etfw">#ALX</a> <a href="https://twitter.com/hashtag/Python?src=hash&amp;ref_src=twsrc%5Etfw">#Python</a> <a href="https://twitter.com/hashtag/Databases?src=hash&amp;ref_src=twsrc%5Etfw">#Databases</a> <a href="https://twitter.com/hashtag/Git?src=hash&amp;ref_src=twsrc%5Etfw">#Git</a> <a href="https://twitter.com/facesofalxse?ref_src=twsrc%5Etfw">@facesofalxse</a></p>&mdash; Busari Akeem Tunde (@alphakeemAdroit) <a href="https://twitter.com/alphakeemAdroit/status/1957006551580877041?ref_src=twsrc%5Etfw">August 17, 2025</a>
-            </blockquote>
-        </aside>
+        <aside>placeholder to add comment thread later</aside>
         
         <button>
             <a href="/html_basic/index.html">Go back to portfolio</a>
